--- a/.github/workflows/hello.yml
+++ b/.github/workflows/hello.yml
@@ -1,16 +1,11 @@
 name: Hello World!
 
-on:
-  push:
-    branches:
-      - master
-
 jobs:
   hello_world_job:
     runs-on: ubuntu-18.04
     steps:
       - name: Say hello
-        run: |
+        run:
           echo "Hello World!"
       - name: Now it is
         run:
