checkout ouput for pr

--- a/.github/workflows/testworkflow.yml
+++ b/.github/workflows/testworkflow.yml
@@ -4,6 +4,9 @@ on:
   push:
     branches:
       - dev-workflow
+    pull_request:
+    branches: [dev]
+    types: [opened, synchronize]
 
 jobs:
   test:
