--- a/.github/workflows/testworkflow.yml
+++ b/.github/workflows/testworkflow.yml
@@ -3,7 +3,7 @@ name: Test workflow
 on:
   push:
     branches:
-      - dev-workflow
+      - dev
   pull_request:
     branches: [dev]
     types: [opened, synchronize]
