--- a/.github/workflows/testworkflow.yml
+++ b/.github/workflows/testworkflow.yml
@@ -20,5 +20,5 @@ jobs:
       - name: escape when contains skip
         env: 
           COMMIT_MESSAGES: ${{ toJson(github.event.commits.*.message) }}
-        if: contains(join(COMMIT_MESSAGES, ', '), '#skip') == false && github.event_name == 'push' 
+        if: contains(join($COMMIT_MESSAGES, ', '), '#skip') == false && github.event_name == 'push' 
         run: echo "deployed"
