--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -14,12 +14,16 @@ jobs:
     env: 
       COMMIT_MESSAGES: ${{ toJson(github.event.commits.*.message) }}
     steps:
+      - name: check branch
+        env:
+          GITHUB_CONTEXT: ${{ toJson(github.ref_protected) }}
+        run: echo "$GITHUB_CONTEXT"
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v1
         with: 
           node-version: '12.x'
       - name: npm install
-        run: npm install
+        run: npm insta
       - name: lint
         run: npm run eslint
       - name: build
@@ -43,6 +47,9 @@ jobs:
           checkstring: "2"
           delay: 5
           rollbackonhealthcheckfailed: true
+      - uses: actions/checkout@v2
+        with:
+          fetch-depth: '0'
       - name: Bump version and push tag
         if: contains(join(env.COMMIT_MESSAGES, ', '), '#skip') == false && github.event_name == 'push' 
         uses: anothrNick/github-tag-action@1.36.0
@@ -50,6 +57,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           DEFAULT_BUMP: patch
       - name: send telegram message on push
+        if: always()
         uses: appleboy/telegram-action@master
         with:
           to: ${{ secrets.TELEGRAM_TO }}
