--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -9,21 +9,17 @@ on:
     types: [opened, synchronize]
 
 jobs:
-  deployment_job:
+  deployment-job:
     runs-on: ubuntu-18.04
     env: 
       COMMIT_MESSAGES: ${{ toJson(github.event.commits.*.message) }}
     steps:
-      - name: check branch
-        env:
-          GITHUB_CONTEXT: ${{ toJson(github.ref_protected) }}
-        run: echo "$GITHUB_CONTEXT"
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v1
         with: 
           node-version: '12.x'
       - name: npm install
-        run: npm insta
+        run: npm install
       - name: lint
         run: npm run eslint
       - name: build
@@ -64,9 +60,9 @@ jobs:
           token: ${{ secrets.TELEGRAM_TOKEN }}
           format: markdown
           message: |
-            _status: ${{ job.status }}_
-            *workflow: ${{ github.workflow }}*
-            *job: ${{ github.job }}*
+            *Status: ${{ job.status }}*
+            Workflow: ${{ github.workflow }}
+            Job: ${{ github.job }}
             Repository: ${{ github.repository }}
             Commit Message: ${{ github.event.commits[0].message }}
             Author: ${{ github.actor }}
