--- a/.github/workflows/healthCheckRoutine.yml
+++ b/.github/workflows/healthCheckRoutine.yml
@@ -2,10 +2,13 @@ name: healthCheck
 on: 
   schedule:
     - cron: '0 0 * * *'
-steps:
-  - name: Check the deployed service URL
-    uses: jtalk/url-health-check-action@v2
-    with:
-      url: https://fullstack-pokemons.herokuapp.com
-      max-attempts: 2
-      retry-delay: 5s
+jobs:
+  health-check-job:
+    runs-on: ubuntu-18.04
+    steps:
+      - name: Check the deployed service URL
+        uses: jtalk/url-health-check-action@v2
+        with:
+          url: https://fullstack-pokemons.herokuapp.com
+          max-attempts: 2
+          retry-delay: 5s
